--- a/app/www/index.html
+++ b/app/www/index.html
@@ -12,8 +12,7 @@
 
     <body>
         <%= require('html-loader!./partials/_header.html').default %> <%=
+        require('html-loader!./partials/_main.html').default %> <%=
         require('html-loader!./partials/_footer.html').default %>
-
-        <div id="root"></div>
     </body>
 </html>
