--- a/app/www/index.html
+++ b/app/www/index.html
@@ -11,8 +11,17 @@
     </head>
 
     <body>
-        <%= require('html-loader!./partials/_header.html').default %> <%=
-        require('html-loader!./partials/_main.html').default %> <%=
-        require('html-loader!./partials/_footer.html').default %>
+        <div class="layout">
+            <%= require('html-loader!./partials/_header.html').default %>
+            <main class="layout__main">
+                <div class="layout__inner">
+                    <div class="layout__left"><%= require('html-loader!./partials/_back.html').default %></div>
+                    <div class="layout__right">right-part</div>
+                    <div class="layout__top">top-part</div>
+                    <div class="layout__top-right"></div>
+                </div>
+            </main>
+            <%= require('html-loader!./partials/_footer.html').default %>
+        </div>
     </body>
 </html>
