--- a/app/www/index.html
+++ b/app/www/index.html
@@ -11,17 +11,19 @@
     </head>
 
     <body>
-        <div class="layout">
-            <%= require('html-loader!./partials/_header.html').default %>
-            <main class="layout__main">
-                <div class="layout__inner">
-                    <div class="layout__left"><%= require('html-loader!./partials/_back.html').default %></div>
-                    <div class="layout__right">right-part</div>
-                    <div class="layout__top">top-part</div>
-                    <div class="layout__top-right"></div>
-                </div>
-            </main>
-            <%= require('html-loader!./partials/_footer.html').default %>
+        <div id="app">
+            <div class="layout">
+                <%= require('html-loader!./partials/_header.html').default %>
+                <main class="layout__main">
+                    <div class="layout__inner">
+                        <div class="layout__left"><%= require('html-loader!./partials/_back.html').default %></div>
+                        <div class="layout__right">right-part</div>
+                        <div class="layout__top">top-part</div>
+                        <div class="layout__top-right"></div>
+                    </div>
+                </main>
+                <%= require('html-loader!./partials/_footer.html').default %>
+            </div>
         </div>
     </body>
 </html>
