--- a/app/www/index.html
+++ b/app/www/index.html
@@ -14,14 +14,14 @@
         <div id="app">
             <div class="layout">
                 <%= require('html-loader!./partials/_header.html').default %>
-                <main class="layout__main">
-                    <div class="layout__inner">
+                <div id="route">
+                    <main class="layout__main">
                         <div class="layout__left"><%= require('html-loader!./partials/_back.html').default %></div>
-                        <div class="layout__right">right-part</div>
-                        <div class="layout__top">top-part</div>
-                        <div class="layout__top-right"></div>
-                    </div>
-                </main>
+                        <div class="layout__right">POrtfolio</div>
+                        <div class="layout__top">About</div>
+                        <div class="layout__top-right">Secret</div>
+                    </main>
+                </div>
                 <%= require('html-loader!./partials/_footer.html').default %>
             </div>
         </div>
