feat: about page

--- a/app/www/pages/about.html
+++ b/app/www/pages/about.html
@@ -1,1 +1,20 @@
-<div class="page-about">About page</div>
+<div class="page-about">
+    <p>An expert in front-end web-development with over 10 years of experience.</p>
+    <p>Strong background in: Backend, UI/UX-design, DevOps, Seo.</p>
+    <p>Moscow. 38 age. English A2, France A1</p>
+
+    <h2 class="m--t__2">Skills</h2>
+    <p>Front: Vanilla JS, TypeScript, Vue (NuxtJS), React, Aurelia</p>
+    <p>Back: PHP Laravel, NodeJs</p>
+    <p>DevOps: CI/CD, Linux, Docker</p>
+    <h2 class="m--t__2">Education:</h2>
+    <p>2005 Specialist Degree in IT (Russian State University named after A.N. Kosygin (Technology. Design. Art))</p>
+    <p>2012 Microsoft MCSA</p>
+    <p>2015 British Higher School of Art and Design</p>
+    <h2 class="m--t__2">Web-develope experience</h2>
+    <p>
+        2013 - 2018 freelance: e-commerce, landings, personal pages, web-games, internal corporate sites, own cms and
+        more...
+    </p>
+    <p>2018 - maintenant web-developer Everys France.</p>
+</div>
