--- a/app/www/index.html
+++ b/app/www/index.html
@@ -18,7 +18,7 @@
                     <main class="layout__main">
                         <div class="layout__left"><%= require('html-loader!./partials/_back.html').default %></div>
                         <div class="layout__right">POrtfolio</div>
-                        <div class="layout__top">About</div>
+                        <div class="layout__top"><%= require('html-loader!./pages/about.html').default %></div>
                         <div class="layout__top-right">Secret</div>
                     </main>
                 </div>
