--- a/app/www/pages/about.html
+++ b/app/www/pages/about.html
@@ -1,4 +1,4 @@
-<div class="page-about">
+<div class="page">
     <p>An expert in front-end web-development with over 10 years of experience.</p>
     <p>Strong background in: Backend, UI/UX-design, DevOps, Seo.</p>
     <p>Moscow. 38 age. English A2, France A1</p>
