feat: portfolio add project

--- a/app/www/pages/portfolio.html
+++ b/app/www/pages/portfolio.html
@@ -11,6 +11,7 @@
     <p><a target="_blank" href="https://risecocacola.ru/">risecocacola.ru</a>: front-end, back-end. Vue + PHP</p>
 
     <h2 class="m--t__4">Old works</h2>
+    <a target="_blank" href="https://megalike.ru/">megalike.ru</a>,
     <a target="_blank" href="https://inprokat.ru/">inprokat.ru</a>,
     <a target="_blank" href="https://kabel-c.ru/">kabel-c.ru</a>,
     <a target="_blank" href="https://svet-c.ru/">svet-c.ru</a>,
